<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="ip_address"
        android:title="@string/pref_ip_address"
        android:defaultValue="@string/pref_default_ip_address"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="ip_port"
        android:title="@string/pref_port"
        android:defaultValue="@string/pref_default_port"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="slave_id"
        android:title="@string/pref_slave_id"
        android:defaultValue="@string/pref_default_slave_id"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <SwitchPreference
        android:title="Temperature units"
        android:defaultValue="true"
        android:key="use_celsius"
        android:summaryOn="Celsius"
        android:summaryOff="Fahrenheit"
        android:switchTextOn="C"
        android:switchTextOff="F"
        android:showText="true"
        />

</PreferenceScreen>
