<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center"
      android:weightSum="1" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="3pt"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amp_hours_res"
                android:id="@+id/textView7"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/ahres"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/kwatt_hours_res"
                android:id="@+id/textView8"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/kwhres"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/amp_hours_daily"
                android:id="@+id/textView9"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/ahdaily"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/watt_hours_daily"
                android:id="@+id/textView10"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/whdaily"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/amp_hours_tot"
                android:id="@+id/textView11"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/ahtot"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/kwatt_hours_tot"
                android:id="@+id/textView12"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/kwhtot"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/max_output_power_daily"
                android:id="@+id/textView13"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/pmaxdaily"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/max_array_voltage_daily"
                android:id="@+id/textView14"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/maxpvvdaily"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/charging_durations"
                android:id="@+id/textView18"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_equalize_daily"
                android:id="@+id/textView15"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/timeeqdaily"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_float_daily"
                android:id="@+id/textView16"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/timefloatdaily"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_absorp_daily"
                android:id="@+id/textView17"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/timeabsorbdaily"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>
    </TableLayout>
</LinearLayout>