<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center"
      android:weightSum="1">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="3pt"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/battery_voltage"
                android:id="@+id/textView"
                android:textSize="20sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/vbat"
                android:textSize="20sp"
                android:layout_gravity="right" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/target_voltage"
                android:id="@+id/textView2"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/vtarget"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/charge_current"
                android:id="@+id/textView3"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/icharge"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/charge_state"
                android:id="@+id/textView4"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/scharge"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/output_power"
                android:id="@+id/textView5"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/pout"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/max_battery_voltage_daily"
                android:id="@+id/textView10"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/vbatmax"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/min_battery_voltage_daily"
                android:id="@+id/textView12"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/vbatmin"
                android:textSize="20sp"
                android:layout_gravity="right"/>
        </TableRow>

    </TableLayout>

</LinearLayout>